<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:hint="@string/login_username"
        android:textSize="@dimen/text14"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_litter" />

    <EditText
        android:id="@+id/et_login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/login_password"
        android:textSize="@dimen/text14"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_litter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_login_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/remeber_pwd"
            android:textSize="@dimen/text14"
        android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cb_login_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin10"
            android:text="@string/auto_login"
            android:textSize="@dimen/text14"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="@dimen/text14"
        android:layout_gravity="center"/>
</LinearLayout>